--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Antoine TABARAUD
+title:  - Accueil
 ---
 <!-- JumboTron -->
 <div class="jumbotron jumbotron-fluid mb-0 pt-0" id="contenuPage">
