--- a/diplomas/index.html
+++ b/diplomas/index.html
@@ -21,7 +21,7 @@ layout: default
             <hr>
             <div id="diplomas-content" class="pt-3">
 
-                {% include list_of_diplomas.html.twig %}
+                {% include list_of_diplomas.html %}
 
 
             </div>
