--- a/projects/index.html
+++ b/projects/index.html
@@ -21,7 +21,7 @@ layout: default
                 <div id="projects-content">
                     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 align-item-center justify-content-center">
 
-                        {% include list_of_projects.html.twig %}
+                        {% include list_of_projects.html %}
 
                     </div>
                 </div>
