--- a/work_experience/index.html
+++ b/work_experience/index.html
@@ -22,7 +22,7 @@ work_experience : current
             <div id="work-content">
                 <div class="timeline m-3 anim">
 
-                    {% include list_of_work_experience.html.twig %}
+                    {% include list_of_work_experience.html %}
 
                 </div>
             </div>
