works on localhost

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,24 +4,24 @@ layout: default
 title: Contact
 
 image:
-    src: /img/AntoineTBD.jpg
-    alt: Antoine TABARAUD
-tel: +33 7 81 48 83 26
-mail: antbd@free.fr
+    src: "/assets/img/AntoineTBD.jpg"
+    alt: "Antoine TABARAUD"
+tel: "+33 7 81 48 83 26"
+mail: "antbd@free.fr"
 github:
-    link: https://www.github.com/anttbd
-    name: AntTBD
+    link: "https://www.github.com/anttbd"
+    name: "AntTBD"
 linkedin:
-    link: https://www.linkedin.com/in/antoine-tabaraud/
-    name: Antoine TABARAUD
+    link: "https://www.linkedin.com/in/antoine-tabaraud/"
+    name: "Antoine TABARAUD"
 location:
-    link: https://goo.gl/maps/nmRy3CjQcAh8VNsJ6
-    name: Limoges, France
+    link: "https://goo.gl/maps/nmRy3CjQcAh8VNsJ6"
+    name: "Limoges, France"
 
-title_2: Curriculum Vitae
+title_2: "Curriculum Vitae"
 CV:
-    src: /docs/CV%20Antoine%20TABARAUD.pdf
-    name: CV Antoine TABARAUD.pdf
+    src: "/assets/docs/CV%20Antoine%20TABARAUD.pdf"
+    name: "CV Antoine TABARAUD.pdf"
 ---
 <!-- Me Contacter -->
 <div class="container-fluid mt-4">
@@ -75,7 +75,7 @@ CV:
                 <div class="row text-center" id="CV-pdf-content">
                     <div class="col-12 col-md-6 mx-auto">
                         <a target="_blank" href="{{ page.CV.src }}" class="btn btn-primary btn-block shadow">
-                            <i class="fas fa-file-pdf"></i> {{ page.image.name }}
+                            <i class="fas fa-file-pdf"></i> {{ page.CV.name }}
                         </a>
                     </div>
                 </div>
