--- a/cube-accueil.html
+++ b/cube-accueil.html
@@ -12,6 +12,6 @@
     <title>Animated Cube</title>
 </head>
 <body>
-<script type="module" src="assets/js/scriptThreejs.js"></script>
+<script type="module" src="/assets/js/scriptThreejs.js"></script>
 </body>
 </html>
