--- a/404.html
+++ b/404.html
@@ -1,15 +1,16 @@
 ---
 layout: default
-title: 404 Error | Sorry, this page does not exist.
-404: current
+title: 404 Error
+page: 404
 ---
-
 <div id="notfound">
 	<div class="notfound">
 		<div class="notfound-404">
-			<h3>Oops! Page not found</h3>
+			<h3 class="fr">Oops! Page non trouvée</h3>
+			<h3 class="en">Oops! Page not found</h3>
 			<h1><span>4</span><span>0</span><span>4</span></h1>
 		</div>
-		<h2>we are sorry, but the page you requested was not found</h2>
+		<h2 class="fr">nous sommes désolé, mais la page que vous demandez n'a pas été trouvé</h2>
+		<h2 class="en">we are sorry, but the page you requested was not found</h2>
 	</div>
 </div>
