--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-#title:  - Home
+#title:  Home
 ---
 
 <!-- ACCUEIL -->
-<div class="container-fluid">
+<div>
     <!-- Cube Threejs -->
-    <div class="row text-center jumbotron my-0 py-0" style="height: 100vh;">
+    <div class="row text-center jumbotron m-0 p-0" style="height: 100vh;">
         <div class="col-12 d-flex align-items-center" id="threejs-window">
             <iframe class="mx-auto" id="threejs" src="/cube-accueil.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
         </div>
