--- a/vues/projects.html
+++ b/vues/projects.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Projects
+permalink: /projects/
 ---
 <!-- Projets et réalisations -->
 <div class="container-fluid mt-3">
