change 3d js file

--- a/vues/cube-accueil.html
+++ b/vues/cube-accueil.html
@@ -15,6 +15,6 @@ permalink: /accueil-3d/
     <title>Animated Cube</title>
 </head>
 <body>
-<script type="module" src="/assets/js/scriptThreejs.js"></script>
+<script type="module" src="./assets/js/scriptThreejs.js"></script>
 </body>
 </html>
