--- a/vues/cube-accueil.html
+++ b/vues/cube-accueil.html
@@ -1,7 +1,8 @@
 ---
 permalink: /accueil-3d/
 ---
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
     <meta name="description" content="Animated Cube in WebGL">
     <meta name="author" content="Antoine TABARAUD">
@@ -15,6 +16,6 @@ permalink: /accueil-3d/
     <title>Animated Cube</title>
 </head>
 <body>
-<script type="module" src="./assets/js/scriptThreejs.js"></script>
+<script type="module" src="/assets/js/scriptThreejs.js"></script>
 </body>
 </html>
