--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ permalink: /
     <!-- Cube Threejs -->
     <div class="row text-center jumbotron m-0 p-0" style="height: 100vh;">
         <div class="col-12 d-flex align-items-center" id="threejs-window">
-            <iframe class="mx-auto" id="threejs" src="/cube-accueil" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+            <iframe class="mx-auto" id="threejs" src="/cube-accueil.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
         </div>
         <div class="carousel-caption text-center nom text-wrapper">
             <h1 class="display-4">Antoine TABARAUD</h1>
