fixe small bugs

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ page: 404
 			<h3 class="en">Oops! Page not found</h3>
 			<h1><span>4</span><span>0</span><span>4</span></h1>
 		</div>
-		<h2 class="fr">nous sommes désolé, mais la page que vous demandez n'a pas été trouvé</h2>
-		<h2 class="en">we are sorry, but the page you requested was not found</h2>
+		<h2 class="fr">Nous sommes désolé, la page que vous avez demandé est introuvable</h2>
+		<h2 class="en">We are sorry, the page you requested was not found</h2>
 	</div>
 </div>
