--- a/contact/index.html
+++ b/contact/index.html
@@ -60,7 +60,7 @@ CV:
       </div>
     </div>
 
-    <div class="row" id="CV-pdf">
+    <!-- <div class="row" id="CV-pdf">
       <div class="col-12 col-md-10 col-lg-8 col-xl-7 mx-auto">
         <div class="row">
           <div class="col-10">
@@ -79,7 +79,7 @@ CV:
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </div>
