--- a/cube-accueil.html
+++ b/cube-accueil.html
@@ -1,18 +1,22 @@
 <!doctype html>
 <html lang="fr">
-<head>
-    <meta name="description" content="Animated Cube in WebGL">
-    <meta name="author" content="Antoine TABARAUD">
-    <style type="text/css">
-        body {
-            margin: 0;
-            padding: 0;
-        }
 
-    </style>
-    <title>Animated Cube</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="WebGL Animated Cube">
+  <meta name="author" content="Antoine TABARAUD">
+  <style type="text/css">
+    body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+  <title>Animated Cube</title>
 </head>
+
 <body>
-<script type="module" src="/assets/js/scriptThreejs.js"></script>
+  <script type="module" src="/assets/js/scriptThreejs.js"></script>
 </body>
+
 </html>
