--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@ location:
 
 title_2: "Curriculum Vitae"
 CV:
-  src: "/assets/docs/CV%20Antoine%20TABARAUD.pdf"
+  src: "/assets/docs/_CV%20Antoine%20TABARAUD.pdf"
   name: "CV Antoine TABARAUD.pdf"
 ---
 <!-- Me Contacter -->
