--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 
 image:
-  src: "/assets/img/AntoineTBD.jpg"
+  src: "/assets/img/AntoineTBD.webp"
   alt: "Antoine TABARAUD"
 tel: "+33 7 81 48 83 26"
 mail: "antbd@free.fr"
