add icon for projects + change url img(add folders) + change load events

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 
 image:
-  src: "/assets/img/AntoineTBD.webp"
+  src: "AntoineTBD.webp"
   alt: "Antoine TABARAUD"
 tel: "+33 7 81 48 83 26"
 mail: "antbd@free.fr"
@@ -32,7 +32,7 @@ CV:
             <h5><i class="fas fa-paper-plane"></i> {{ page.title }}</h5>
           </div>
           <div class="card-body">
-            <img src="{{ page.image.src }}" class="rounded-circle img-thumbnail mx-auto d-block" alt="{{ page.image.alt }}" style="max-height: 200px">
+            <img src="/assets/img/contact/{{ page.image.src }}" class="rounded-circle img-thumbnail mx-auto d-block" alt="{{ page.image.alt }}" style="max-height: 200px">
             <hr>
             <div class="row">
               <div class="col-12 col-sm-6">
