--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <!-- ACCUEIL -->
-<div>
+<div id="home">
     <!-- Cube Threejs -->
     <div class="row text-center jumbotron m-0 p-0" style="height: 100vh;">
         <div class="col-12 d-flex align-items-center" id="threejs-window">
@@ -17,22 +17,23 @@ layout: default
         </div>
     </div>
     <!-- Fin Cube Threejs -->
-</div>
 
-<!-- JumboTron -->
-<div class="jumbotron jumbotron-fluid mb-0 pt-0" id="contenuPage">
-    <div class="container">
-        <div class="fr">
-            <h2 class="display-5">Ingénieur Informatique</h2>
-            <p class="lead">Étudiant en Ingénierie Informatique, je crée des sites, des logiciels, des jeux. Je réalise aussi des projets de systèmes embarqués en robotique mobile ou domotique.
-                N'hésitez pas à <a class="link text-info" href="/contact">me contacter</a> pour toute question ou pour d'éventuelles offres d'emploi.</p>
+    <!-- JumboTron -->
+    <div class="jumbotron jumbotron-fluid mb-0 pt-0" id="contenuPage">
+        <div class="container">
+            <div class="fr">
+                <h2 class="display-5">Ingénieur Informatique</h2>
+                <p class="lead">Étudiant en Ingénierie Informatique, je crée des sites, des logiciels, des jeux. Je réalise aussi des projets de systèmes embarqués en robotique mobile ou domotique.
+                    N'hésitez pas à <a class="link text-info" href="/contact">me contacter</a> pour toute question ou pour d'éventuelles offres d'emploi.</p>
+            </div>
+            <div class="en">
+                <h2 class="display-5">Computing Engineer</h2>
+                <p class="lead">I am a French Computing Engineer student, I create websites, software, games. I also realize projects of embedded systems in mobile robotics or domotic.
+                    Please feel free to <a class="link text-info" href="/contact">contact me</a> for further question or for possible job offers.</p>
+            </div>
         </div>
-        <div class="en">
-            <h2 class="display-5">Computing Engineer</h2>
-            <p class="lead">I am a French Computing Engineer student, I create websites, software, games. I also realize projects of embedded systems in mobile robotics or domotic.
-                Please feel free to <a class="link text-info" href="/contact">contact me</a> for further question or for possible job offers.</p>
-        </div>
+        <!-- Fin JumboTron -->
+        <!-- Fin Accueil -->
     </div>
-    <!-- Fin JumboTron -->
-    <!-- Fin Accueil -->
+
 </div>
