--- a/diplomas/index.html
+++ b/diplomas/index.html
@@ -15,7 +15,7 @@ title: Diplomas
             </h2>
           </div>
           <div class="col-2">
-            <h2 id="diplomas-show" class="text-right"><i class="fas fa-minus-square"></i></h2>
+            <h2 id="diplomas-show" class="text-end"><i class="fas fa-minus-square"></i></h2>
           </div>
         </div>
       </div>
