--- a/work_experience/index.html
+++ b/work_experience/index.html
@@ -15,7 +15,7 @@ work_experience : current
             <h2 class="en"><i class="fas fa-id-card"></i> Work Experience</h2>
           </div>
           <div class="col-2">
-            <h2 id="work-show" class="text-right"><i class="fas fa-minus-square"></i></h2>
+            <h2 id="work-show" class="text-end"><i class="fas fa-minus-square"></i></h2>
           </div>
         </div>
         <hr>
