--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@ layout: default
         <div class="col-12 d-flex align-items-center" id="threejs-window">
             <iframe class="mx-auto" id="threejs" src="/cube-accueil.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
         </div>
-        <div class="carousel-caption text-center nom text-wrapper">
-            <h1 class="display-4">Antoine TABARAUD</h1>
-            <!-- fleche down animation -->
-            <h4><a href="#contenuPage" id="btn-arrow-down" class="text-light"><i class="fas fa-chevron-down"></i></a></h4>
-        </div>
+    </div>
+    <div class="carousel-caption text-center nom text-wrapper">
+        <h1 class="display-4">Antoine TABARAUD</h1>
+        <!-- fleche down animation -->
+        <h4><a href="#contenuPage" id="btn-arrow-down" class="text-light"><i class="fas fa-chevron-down"></i></a></h4>
     </div>
     <!-- Fin Cube Threejs -->
 
     <!-- JumboTron -->
-    <div class="jumbotron jumbotron-fluid mb-0 pt-0" id="contenuPage">
+    <div class="jumbotron jumbotron-fluid mb-0 pt-0 pb-5" id="contenuPage">
         <div class="container">
             <div class="fr">
-                <h2 class="display-5">Ingénieur Informatique</h2>
+                <h2>Ingénieur Informatique</h2>
                 <p class="lead">Étudiant en Ingénierie Informatique, je crée des jeux, des sites, des logiciels. Je réalise aussi des projets de systèmes embarqués en robotique mobile ou domotique.
                     N'hésitez pas à <a class="link text-info" href="/contact">me contacter</a> pour toute question ou pour d'éventuelles offres d'emploi.</p>
             </div>
             <div class="en">
-                <h2 class="display-5">Computing Engineer</h2>
+                <h2>Computing Engineer</h2>
                 <p class="lead">I am a French Computing Engineer student, I create games, websites, software. I also realize projects of embedded systems in mobile robotics or domotic.
                     Please feel free to <a class="link text-info" href="/contact">contact me</a> for further question or for possible job offers.</p>
             </div>
