--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@ title: Projects
               <h2 class="en"><i class="fas fa-briefcase"></i> Projects and achievements</h2>
             </div>
             <div class="col-2">
-              <h2 id="projects-show" class="text-right"><i class="fas fa-minus-square"></i></h2>
+              <h2 id="projects-show" class="text-end"><i class="fas fa-minus-square"></i></h2>
             </div>
           </div>
         </div>
