upgrades: add new projects fix bugs add a new home page background for threejs box : a net graph available also in dark mode

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ layout: default
         <div class="container">
             <div class="fr">
                 <h2>Ingénieur Informatique</h2>
-                <p class="lead">Étudiant en Ingénierie Informatique, je crée des jeux, des sites, des logiciels. Je réalise aussi des projets de systèmes embarqués en robotique mobile ou domotique.
+                <p class="lead">Étudiant en Ingénierie Informatique, je crée des jeux, des sites, des logiciels. Je réalise aussi des projets de systèmes embarqués en robotique mobile ou domotique. Mes projets sont disponibles <a class="link text-info" href="/projects">ici</a> pour plus de détails.<br>
                     N'hésitez pas à <a class="link text-info" href="/contact">me contacter</a> pour toute question ou pour d'éventuelles offres d'emploi.</p>
             </div>
             <div class="en">
                 <h2>Computing Engineer</h2>
-                <p class="lead">I am a French Computing Engineer student, I create games, websites, software. I also realize projects of embedded systems in mobile robotics or domotic.
+                <p class="lead">I am a French Computing Engineer student, I create games, websites, software. I also realize projects of embedded systems in mobile robotics or domotic. My projects are available <a class="link text-info" href="/projects">here</a> for more details.<br>
                     Please feel free to <a class="link text-info" href="/contact">contact me</a> for further question or for possible job offers.</p>
             </div>
         </div>
