--- a/work_experience/index.html
+++ b/work_experience/index.html
@@ -8,18 +8,7 @@ work_experience : current
   <!-- Section Work Experience -->
   <div class="row">
     <div class="col-12" id="work">
-      <div class="container">
-        <div class="row">
-          <div class="col-10">
-            <h2 class="fr"><i class="fas fa-id-card"></i> Expériences Professionnelles</h2>
-            <h2 class="en"><i class="fas fa-id-card"></i> Work Experience</h2>
-          </div>
-          <div class="col-2">
-            <h2 id="work-show" class="text-end"><i class="fas fa-minus-square"></i></h2>
-          </div>
-        </div>
-        <hr>
-      </div>
+      {% include topTitle.html topTitle=site.data.otherText.workExperience id="work" %}
       <div id="work-content">
         <div class="timeline m-3 anim">
 
